bootsrap-icon: Add Bootstrap icons to the project

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
-    "alpinejs": "^3.14.9"
+    "alpinejs": "^3.14.9",
+    "bootstrap-icons": "^1.13.1"
   }
 }
